--- a/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
+++ b/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
@@ -12,6 +12,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -41,12 +43,24 @@
                    Text="SonarLint can also analyze JavaScript, C and C++ files. After installing the support for these languages, it will be activated for newly opened files. Note that it doesn't benefit from the connected mode for now."
                    Margin="5" TextWrapping="Wrap" />
 
-        <StackPanel x:Name="VerbosityPanel" Grid.Row="2" Grid.ColumnSpan="2">
+        <CheckBox
+                Grid.Row="2" Grid.ColumnSpan="2"
+                x:Name="ShowAdditionalLanguageDownloadDialogue"
+                Content="Prompt to activate additional language support on startup" Margin="5"/>
+
+        <TextBlock 
+                Grid.Row="3" Grid.Column="2"
+                x:Name="ShowAdditionalLanguageDownloadText"
+                Text="Display a dialogue giving the option to download additional languages when Visual Studio starts"
+                TextWrapping="Wrap" />
+
+        <StackPanel x:Name="VerbosityPanel" Grid.Row="4" Grid.ColumnSpan="2">
 
             <TextBlock Text="SonarLint output verbosity for the analysis of additional languages:"
                        Margin="5" TextWrapping="Wrap" />
 
             <ComboBox x:Name="DaemonVerbosity" SelectedIndex="2" HorizontalContentAlignment="Stretch" Margin="5" Padding="5,2.5"/>
         </StackPanel>
+        
     </Grid>
 </UserControl>
