--- a/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
+++ b/src/Integration.Vsix/Settings/GeneralOptionsDialogControl.xaml
@@ -4,11 +4,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d:DesignHeight="300"
-             d:DesignWidth="400"
+             d:DesignWidth="450"
              mc:Ignorable="d">
 
     <Grid Margin="0,0,0,5">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -39,17 +41,30 @@
                    VerticalAlignment="Center"
                    Margin="5" TextWrapping="Wrap"/>
 
+        <Button Grid.Column="0" Grid.Row="3" Content="Open user settings"
+                x:Name="OpenSettingsButton"
+                Margin="5,25,5,5" Padding="5,2.5" />
+        <TextBlock Grid.Column="1" Grid.Row="3"
+                   Text="Open the per-user settings file."
+                   VerticalAlignment="Center"
+                   Margin="5,25,5,5"
+                   TextWrapping="Wrap" />
+        <TextBlock Grid.Column="1" Grid.Row="4"
+                   Text="The file will be created if it does not exist."
+                   VerticalAlignment="Center"
+                   Margin="5,0,0,5" TextWrapping="Wrap" />
+        
         <TextBlock Grid.Column="1" Grid.Row="1"
                    Text="SonarLint can also analyze JavaScript files. After installing the support for this language, it will be activated for newly opened files. Note that it doesn't benefit from the connected mode for now."
                    Margin="5" TextWrapping="Wrap" />
 
-        <StackPanel x:Name="VerbosityPanel" Grid.Row="4" Grid.ColumnSpan="2">
+        <StackPanel x:Name="VerbosityPanel" Grid.Row="5" Grid.ColumnSpan="2">
 
             <TextBlock Text="SonarLint output verbosity for the analysis of additional languages:"
-                       Margin="5" TextWrapping="Wrap" />
+                       Margin="5,25,5,5" TextWrapping="Wrap" />
 
             <ComboBox x:Name="DaemonVerbosity" SelectedIndex="2" HorizontalContentAlignment="Stretch" Margin="5" Padding="5,2.5"/>
         </StackPanel>
-        
+
     </Grid>
 </UserControl>
