--- a/src/Integration/Connection/UI/ConnectionInfoDialogView.xaml
+++ b/src/Integration/Connection/UI/ConnectionInfoDialogView.xaml
@@ -1,7 +1,7 @@
 ﻿<vsui:DialogWindow x:Class="SonarLint.VisualStudio.Integration.Connection.UI.ConnectionInfoDialogView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:converters="clr-namespace:SonarLint.VisualStudio.Integration.WPF"
+                   xmlns:converters="clr-namespace:SonarLint.VisualStudio.Core.WPF;assembly=SonarLint.VisualStudio.Core"
                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                    xmlns:resx="clr-namespace:SonarLint.VisualStudio.Integration.Resources"
@@ -26,7 +26,7 @@
 
         <converters:BoolToVisibilityConverter x:Key="TrueToVisibleConverter"
                                               FalseValue="Collapsed" TrueValue="Visible"
-                                              />
+        />
         <converters:BoolToVisibilityConverter x:Key="FalseToVisibleConverter"
                                               FalseValue="Visible" TrueValue="Collapsed"
                                               />
